Added Appointment system, dto. slight changes in jwt. All backend implemented. Checked using Postman. Frontend not implemented

--- a/backendHMS/src/main/resources/application.properties
+++ b/backendHMS/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/healthcare_db
 spring.datasource.username=postgres
-spring.datasource.password=agbdlcid
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
