--- a/backendHMS/pom.xml
+++ b/backendHMS/pom.xml
@@ -87,10 +87,14 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
 
-
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
