--- a/frontendHMS/package.json
+++ b/frontendHMS/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.7.1",
+    "react-router-dom": "^7.8.0",
+    "recharts": "^3.1.2",
     "switch": "^0.0.0"
   },
   "devDependencies": {
