--- a/frontendHMS/package.json
+++ b/frontendHMS/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.11.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.540.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2",
     "switch": "^0.0.0"
