--- a/backendHMS/src/main/resources/application.properties
+++ b/backendHMS/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
+# FIXED: Add this to properly handle PostgreSQL bytea type
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.type.preferred_instant_jdbc_type=TIMESTAMP
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.jpa.properties.hibernate.connection.autocommit=false
